gcl (2.6.1-32) unstable; urgency=low

  * Try to automatically determine the form used for the explicitly
    compiled in external function addresses in plt.c
  * No need to explicitly write cr-lf on windows
  * Autodetection of machine on FreeBSD
  * Updated defs and h files for FreeBSD courtesy of Mark Murray

 -- Camm Maguire <camm@enhanced.com>  Mon,  8 Mar 2004 21:57:24 +0000

gcl (2.6.1-31) unstable; urgency=low

  * Adjustments to vs_top reset logic to clear (hopefully last)
    remaining bug found by the random-tester
  * Allow args-info-referred-vars to match replaced vars, clearing bug
    report submitted by Matt Kauffman
  * Rework plt code yet again to be compatible with compiler::link for
    axiom, and mingw32

 -- Camm Maguire <camm@enhanced.com>  Mon,  8 Mar 2004 12:16:46 +0000

gcl (2.6.1-30) unstable; urgency=low

  * Fix rsym generated symbol tables for 64 bit platforms
  * Make sure 'unwind' in frame.c does nt go below frs_org
  * Do not define symbols with no value, either in bfd/rsym, or in
    plt.c.  Generates a clear and explicit error of an undefined symbol
    when we've missed an address
  * Define the external symbols known to be written at present in plt.c
  * fix some more compiler errors found by the random tester -- all
    related to proper unwinding of temporary reductions of vs_top from
    te local supremum

 -- Camm Maguire <camm@enhanced.com>  Sat,  6 Mar 2004 02:05:59 +0000

gcl (2.6.1-29) unstable; urgency=low

  * Remove implicit dependency on gawk, optimize plt.c a little

 -- Camm Maguire <camm@enhanced.com>  Wed,  3 Mar 2004 16:08:30 +0000

gcl (2.6.1-28) unstable; urgency=low

  * make sure bfd fasload initializes dum.sm.sm_object1 for
    read_fasl_vector
  * When a tagbody contains ccb reference tags, and hence i itself
    marked ccb, mark all the clb tags therein ccb too, as the tagbody
    environment will be consed in c2tagbody-ccb.  FIXME -- review this
    logic carefully
  * fix typoe in o/sfaslbfd.c