@@ -5,8 +5,9 @@ gcl (2.6.1-32) unstable; urgency=low
   * No need to explicitly write cr-lf on windows
   * Autodetection of machine on FreeBSD
   * Updated defs and h files for FreeBSD courtesy of Mark Murray
+  * Minor ifdefs needed for FreeBSD
 
- -- Camm Maguire <camm@enhanced.com>  Mon,  8 Mar 2004 21:57:24 +0000
+ -- Camm Maguire <camm@enhanced.com>  Mon,  8 Mar 2004 22:02:32 +0000
 
 gcl (2.6.1-31) unstable; urgency=low
 
